--- a/CrossSection.ipynb
+++ b/CrossSection.ipynb
@@ -350,6 +350,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "d220c49e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(N₀ = 1.0, α = 1.0, a = 1.0, coeff_dict = Dict((3, 1) => 1.0))"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "custom_params_shape = merge(params_shape, (coeff_dict = Dict((3, 1) => 1.0),))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da1fef08",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t_range, dσdt_coh, dσdt_coh_err = diffractive(\"coh\", \"shape\", params_wavefct, params_mc, p_shape=custom_params_shape, run_threads=true)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "f28be102",
    "metadata": {},
@@ -360,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "7c1462a2",
    "metadata": {},
    "outputs": [
@@ -370,7 +401,7 @@
        "read_coherent_data (generic function with 1 method)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
