Changed diffraction function, option to write scattering amplitude to file for each t and sample.

--- a/CrossSection.ipynb
+++ b/CrossSection.ipynb
@@ -2,10 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "0efabb40",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "┌ Info: Installing 'Julia (10 threads) 1.11.5' kernelspec in /Users/dana/Library/Jupyter/kernels/julia-_10-threads_-1.11\n",
+      "└ @ IJulia /Users/dana/.julia/packages/IJulia/0TYRi/deps/kspec.jl:120\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "using IJulia\n",
     "installkernel(\"Julia (10 threads)\", env=Dict(\"JULIA_NUM_THREADS\"=>\"10\"))\n",
@@ -1305,9 +1323,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia (10 threads) 1.11.4",
+   "display_name": "Julia 1.11.5",
    "language": "julia",
-   "name": "julia-_10-threads_-1.11"
+   "name": "julia-1.11"
   },
   "language_info": {
    "file_extension": ".jl",
