--- a/notebooks/ShapeFunctionsTests.ipynb
+++ b/notebooks/ShapeFunctionsTests.ipynb
@@ -781,6 +781,187 @@
   },
   {
    "cell_type": "markdown",
+   "id": "462238f1",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fde99602",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "find_best_N₀_at_Δ0_adaptive (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Compute χ² at Δ=0 for a given N₀\n",
+    "function chisq_for_N₀_at_Δ0(N₀, params_shape, params_wavefct, params_mc, params_run_local; unique_outdirs=false)\n",
+    "    try\n",
+    "        params_shape_norm = merge(params_shape, (N₀ = N₀,))\n",
+    "        params_mc_Δ0 = merge(params_mc, (Δmin = 0.0, Δmax = 0.0, Δlen = 1))\n",
+    "\n",
+    "        # Optionally isolate outputs per N₀ to avoid file collisions\n",
+    "        p_run_iter = if unique_outdirs\n",
+    "            outdir = joinpath(params_run_local.outdir, \"N0_$(round(N₀; digits=6))\")\n",
+    "            merge(params_run_local, (outdir = outdir,))\n",
+    "        else\n",
+    "            params_run_local\n",
+    "        end\n",
+    "\n",
+    "        # Run the forward model at Δ=0 only\n",
+    "        diffractive(\"coh+incoh\", \"shapeamp\", params_wavefct, params_mc_Δ0; p_shape=params_shape_norm, p_run=p_run_iter)\n",
+    "\n",
+    "        # Where compute_cross_sections will read results from\n",
+    "        compute_dir = joinpath(p_run_iter.savepath, p_run_iter.outdir)\n",
+    "        endswith(compute_dir, \"/\") && (compute_dir = compute_dir[1:end-1])\n",
+    "\n",
+    "        Nsamples = params_shape.Nsamples\n",
+    "        t_range, dσdt_coh, dσdt_coh_err, dσdt_incoh, dσdt_incoh_err =\n",
+    "            compute_cross_sections(compute_dir, [0.0], Nsamples, p_run_iter, Nsamples)\n",
+    "\n",
+    "        tcent_coh_hera, dσdt_coh_hera, Δtot_coh_hera = read_coherent_data(\"../data/jpsi_coh_hera.txt\")\n",
+    "\n",
+    "        model_val = dσdt_coh[1]\n",
+    "        data_val  = dσdt_coh_hera[1]\n",
+    "        data_err  = Δtot_coh_hera[1]\n",
+    "\n",
+    "        χsq = ((model_val - data_val) / data_err)^2\n",
+    "\n",
+    "        return isfinite(χsq) ? χsq : Inf\n",
+    "    catch\n",
+    "        return Inf\n",
+    "    end\n",
+    "end\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "23a1705f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "find_best_N₀_at_Δ0_adaptive (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Adaptive search starting at N₀=1.0 that can go lower or higher\n",
+    "function find_best_N₀_at_Δ0_adaptive(params_shape, params_wavefct, params_mc, params_run_local;\n",
+    "    start=1.0, step_factor=1.6, min_N0=1e-3, max_N0=10.0, max_expansions=20,\n",
+    "    verbose=true, unique_outdirs=false, brent_reltol=1e-3)\n",
+    "\n",
+    "    # Cache to avoid recomputation\n",
+    "    cache = Dict{Float64,Float64}()\n",
+    "    obj(N) = get!(cache, N) do\n",
+    "        chisq_for_N₀_at_Δ0(N, params_shape, params_wavefct, params_mc, params_run_local; unique_outdirs=unique_outdirs)\n",
+    "    end\n",
+    "\n",
+    "    # Evaluate at start\n",
+    "    x0 = clamp(start, min_N0, max_N0)\n",
+    "    f0 = obj(x0)\n",
+    "    verbose && println(\"Start N₀=$x0 → χ²=$f0\")\n",
+    "\n",
+    "    # Expand upwards\n",
+    "    xr, fr = x0, f0\n",
+    "    n = 0\n",
+    "    while n < max_expansions\n",
+    "        xtry = clamp(xr * step_factor, min_N0, max_N0)\n",
+    "        if xtry == xr; break; end\n",
+    "        ftry = obj(xtry)\n",
+    "        verbose && println(\"  up: N₀=$xtry → χ²=$ftry\")\n",
+    "        if ftry < fr\n",
+    "            xr, fr = xtry, ftry\n",
+    "            n += 1\n",
+    "        else\n",
+    "            break\n",
+    "        end\n",
+    "    end\n",
+    "    up_bracket = (xr, fr)\n",
+    "\n",
+    "    # Expand downwards\n",
+    "    xl, fl = x0, f0\n",
+    "    n = 0\n",
+    "    while n < max_expansions\n",
+    "        xtry = clamp(xl / step_factor, min_N0, max_N0)\n",
+    "        if xtry == xl; break; end\n",
+    "        ftry = obj(xtry)\n",
+    "        verbose && println(\"down: N₀=$xtry → χ²=$ftry\")\n",
+    "        if ftry < fl\n",
+    "            xl, fl = xtry, ftry\n",
+    "            n += 1\n",
+    "        else\n",
+    "            break\n",
+    "        end\n",
+    "    end\n",
+    "    down_bracket = (xl, fl)\n",
+    "\n",
+    "    # Build a bracket [a,b] that contains the best among {xl, x0, xr}\n",
+    "    a = min(xl, xr); b = max(xl, xr)\n",
+    "    # Ensure a < b with some span\n",
+    "    if a == b; a = max(min_N0, x0/step_factor); b = min(max_N0, x0*step_factor); end\n",
+    "\n",
+    "    # Refine with Brent in [a,b]\n",
+    "    result = optimize(obj, a, b, Brent(); rel_tol=brent_reltol)\n",
+    "    best_N₀ = Optim.minimizer(result)\n",
+    "    best_χsq = Optim.minimum(result)\n",
+    "    verbose && println(\"Brent in [$a,$b] → N₀=$best_N₀, χ²=$best_χsq\")\n",
+    "\n",
+    "    return best_N₀, best_χsq, (a,b), cache\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87598215",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_N₀, best_χsq, bracket, evals = find_best_N₀_at_Δ0_adaptive(params_shape, params_wavefct, params_mc, params_run_local; start=1.0, min_N0=1e-3, max_N0=1e3, unique_outdirs=false)\n",
+    "println(\"Best N₀ at Δ=0: \", best_N₀, \" with χ²: \", best_χsq)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "513b7447",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1.3220745341265232, 0.03323753086744089)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best_N₀, best_χsq"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "baa898db",
    "metadata": {},
    "source": [
