--- a/notebooks/ShapeFunctionsTests.ipynb
+++ b/notebooks/ShapeFunctionsTests.ipynb
@@ -533,21 +533,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "7f90d457",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "read_coherent_data (generic function with 1 method)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "include(\"../src/plotrecipes.jl\")\n",
     "include(\"../src/data.jl\")"
@@ -930,92 +919,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "87598215",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32mTotal iterations * blocks 160: 100%|██████| Time: 0:00:54 ( 0.34  s/it)\u001b[39m\n",
-      "\u001b[32mTotal iterations * blocks 160: 100%|██████| Time: 0:00:54 ( 0.34  s/it)\u001b[39m\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[36m\u001b[1m┌ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mSaved A_sample\n",
-      "\u001b[36m\u001b[1m│ \u001b[22m\u001b[39m  filename = \"../results//testnorm/A_delta1_config1.jld2\"\n",
-      "\u001b[36m\u001b[1m│ \u001b[22m\u001b[39m  Δ = 0.0\n",
-      "\u001b[36m\u001b[1m└ \u001b[22m\u001b[39m  iamp = 1\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Computed cross sections for path: ../results/testnorm\n",
-      "Start N₀=1.0 → χ²=83.04584003687985\n",
-      "\u001b[32mTotal iterations * blocks 160: 100%|██████| Time: 0:00:54 ( 0.34  s/it)\u001b[39m\n",
-      "\u001b[32mTotal iterations * blocks 160: 100%|██████| Time: 0:00:54 ( 0.34  s/it)\u001b[39m\n",
-      "Computed cross sections for path: ../results/testnorm\n",
-      "  up: N₀=0.1 → χ²=344.20280300313453\n",
-      "\u001b[32mTotal iterations * blocks 160:   1%|▏     |  ETA: 0:00:56 ( 0.36  s/it)\u001b[39m"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[36m\u001b[1m┌ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mSaved A_sample\n",
-      "\u001b[36m\u001b[1m│ \u001b[22m\u001b[39m  filename = \"../results//testnorm/A_delta1_config1.jld2\"\n",
-      "\u001b[36m\u001b[1m│ \u001b[22m\u001b[39m  Δ = 0.0\n",
-      "\u001b[36m\u001b[1m└ \u001b[22m\u001b[39m  iamp = 1\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32mTotal iterations * blocks 160: 100%|██████| Time: 0:00:55 ( 0.34  s/it)\u001b[39m\n",
-      "\u001b[32mTotal iterations * blocks 160: 100%|██████| Time: 0:00:54 ( 0.34  s/it)\u001b[39m\n",
-      "Computed cross sections for path: ../results/testnorm\n",
-      "down: N₀=10.0 → χ²=756.4026386383413\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[36m\u001b[1m┌ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mSaved A_sample\n",
-      "\u001b[36m\u001b[1m│ \u001b[22m\u001b[39m  filename = \"../results//testnorm/A_delta1_config1.jld2\"\n",
-      "\u001b[36m\u001b[1m│ \u001b[22m\u001b[39m  Δ = 0.0\n",
-      "\u001b[36m\u001b[1m└ \u001b[22m\u001b[39m  iamp = 1\n"
-     ]
-    },
-    {
-     "ename": "LoadError",
-     "evalue": "x_lower must be less than x_upper",
-     "output_type": "error",
-     "traceback": [
-      "x_lower must be less than x_upper",
-      "",
-      "Stacktrace:",
-      " [1] \u001b[0m\u001b[1merror\u001b[22m\u001b[0m\u001b[1m(\u001b[22m\u001b[90ms\u001b[39m::\u001b[0mString\u001b[0m\u001b[1m)\u001b[22m",
-      "\u001b[90m   @\u001b[39m \u001b[90mBase\u001b[39m \u001b[90m./\u001b[39m\u001b[90m\u001b[4merror.jl:35\u001b[24m\u001b[39m",
-      " [2] \u001b[0m\u001b[1moptimize\u001b[22m\u001b[0m\u001b[1m(\u001b[22m\u001b[90mf\u001b[39m::\u001b[0mvar\"#obj#16\"\u001b[90m{Bool, @NamedTuple{N₀::Float64, α::Float64, a::Float64, σ::Float64, Nsamples::Int64, type::String, mn::Tuple{Int64, Int64}, nvals::Int64, rotate::Bool, checktp::Bool, replacetp::Bool}, @NamedTuple{Nₜ::Float64, Nₗ::Float64, mf::Float64, R²::Float64, e::Float64, êf::Int64, Nc::Int64, Mᵥ::Float64, δ::Int64, Q²::Int64}, @NamedTuple{rmin::Float64, rmax::Float64, bmin::Float64, bmax::Float64, zmin::Float64, zmax::Float64, θbmin::Float64, θbmax::Float64, Δmin::Float64, Δmax::Float64, Δlen::Int64, neval::Int64, niters::Int64, error_method::String}, @NamedTuple{run::String, savefile::Bool, run_threads::Bool, savepath::String, outdir::String}, Dict{Float64, Float64}}\u001b[39m, \u001b[90mx_lower\u001b[39m::\u001b[0mFloat64, \u001b[90mx_upper\u001b[39m::\u001b[0mFloat64, \u001b[90mmo\u001b[39m::\u001b[0mBrent; \u001b[90mrel_tol\u001b[39m::\u001b[0mFloat64, \u001b[90mabs_tol\u001b[39m::\u001b[0mFloat64, \u001b[90miterations\u001b[39m::\u001b[0mInt64, \u001b[90mtime_limit\u001b[39m::\u001b[0mFloat64, \u001b[90mstore_trace\u001b[39m::\u001b[0mBool, \u001b[90mshow_trace\u001b[39m::\u001b[0mBool, \u001b[90mshow_warnings\u001b[39m::\u001b[0mBool, \u001b[90mcallback\u001b[39m::\u001b[0mNothing, \u001b[90mshow_every\u001b[39m::\u001b[0mInt64, \u001b[90mextended_trace\u001b[39m::\u001b[0mBool\u001b[0m\u001b[1m)\u001b[22m",
-      "\u001b[90m   @\u001b[39m \u001b[35mOptim\u001b[39m \u001b[90m~/.julia/packages/Optim/7krni/src/univariate/solvers/\u001b[39m\u001b[90m\u001b[4mbrent.jl:49\u001b[24m\u001b[39m",
-      " [3] \u001b[0m\u001b[1moptimize\u001b[22m",
-      "\u001b[90m   @\u001b[39m \u001b[90m~/.julia/packages/Optim/7krni/src/univariate/solvers/\u001b[39m\u001b[90m\u001b[4mbrent.jl:23\u001b[24m\u001b[39m\u001b[90m [inlined]\u001b[39m",
-      " [4] \u001b[0m\u001b[1mfind_best_N₀_at_Δ0_adaptive\u001b[22m\u001b[0m\u001b[1m(\u001b[22m\u001b[90mparams_shape\u001b[39m::\u001b[0m@NamedTuple\u001b[90m{N₀::Float64, α::Float64, a::Float64, σ::Float64, Nsamples::Int64, type::String, mn::Tuple{Int64, Int64}, nvals::Int64, rotate::Bool, checktp::Bool, replacetp::Bool}\u001b[39m, \u001b[90mparams_wavefct\u001b[39m::\u001b[0m@NamedTuple\u001b[90m{Nₜ::Float64, Nₗ::Float64, mf::Float64, R²::Float64, e::Float64, êf::Int64, Nc::Int64, Mᵥ::Float64, δ::Int64, Q²::Int64}\u001b[39m, \u001b[90mparams_mc\u001b[39m::\u001b[0m@NamedTuple\u001b[90m{rmin::Float64, rmax::Float64, bmin::Float64, bmax::Float64, zmin::Float64, zmax::Float64, θbmin::Float64, θbmax::Float64, Δmin::Float64, Δmax::Float64, Δlen::Int64, neval::Int64, niters::Int64, error_method::String}\u001b[39m, \u001b[90mparams_run_local\u001b[39m::\u001b[0m@NamedTuple\u001b[90m{run::String, savefile::Bool, run_threads::Bool, savepath::String, outdir::String}\u001b[39m; \u001b[90mstart\u001b[39m::\u001b[0mFloat64, \u001b[90mstep_factor\u001b[39m::\u001b[0mFloat64, \u001b[90mmin_N0\u001b[39m::\u001b[0mFloat64, \u001b[90mmax_N0\u001b[39m::\u001b[0mFloat64, \u001b[90mmax_expansions\u001b[39m::\u001b[0mInt64, \u001b[90mverbose\u001b[39m::\u001b[0mBool, \u001b[90munique_outdirs\u001b[39m::\u001b[0mBool, \u001b[90mbrent_reltol\u001b[39m::\u001b[0mFloat64\u001b[0m\u001b[1m)\u001b[22m",
-      "\u001b[90m   @\u001b[39m \u001b[36mMain\u001b[39m \u001b[90m./\u001b[39m\u001b[90m\u001b[4mIn[7]:57\u001b[24m\u001b[39m",
-      " [5] top-level scope",
-      "\u001b[90m   @\u001b[39m \u001b[90m\u001b[4mIn[8]:1\u001b[24m\u001b[39m"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "best_N₀, best_χsq, bracket, evals = find_best_N₀_at_Δ0_adaptive(params_shape, params_wavefct, params_mc, params_run_local; start=1.0, min_N0=1e-3, max_N0=1e3, step_factor=0.1, unique_outdirs=false)\n",
     "println(\"Best N₀ at Δ=0: \", best_N₀, \" with χ²: \", best_χsq)"
@@ -1040,6 +947,131 @@
    ],
    "source": [
     "best_N₀, best_χsq"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a413b12",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "90515a6d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/Work/protonshape`\n"
+     ]
+    }
+   ],
+   "source": [
+    "import Pkg\n",
+    "Pkg.activate(\"/Users/dana/Work/protonshape\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "ebd75599",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "include(\"../src/ProtonShape.jl\")\n",
+    "using .ProtonShape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "283ee9ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(run = \"local\", savefile = true, run_threads = false, savepath = \"../results\", outdir = \"testnorm/\")"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "params_run_local = (run = \"local\", savefile = true, run_threads = false, savepath = \"../results\", outdir = \"testnorm/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e35b7d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "find_best_N₀_at_Δ₀_adaptive(params_shape, params_wavefct, params_mc, params_run_local, params_norm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "c9abf2a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mTotal iterations * blocks 160: 100%|██████| Time: 0:00:57 ( 0.36  s/it)\u001b[39m\n",
+      "\u001b[32mTotal iterations * blocks 160: 100%|██████| Time: 0:00:55 ( 0.35  s/it)\u001b[39m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[36m\u001b[1m┌ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mSaved A_sample\n",
+      "\u001b[36m\u001b[1m│ \u001b[22m\u001b[39m  filename = \"../results/testnorm/A_delta1_config1.jld2\"\n",
+      "\u001b[36m\u001b[1m│ \u001b[22m\u001b[39m  Δ = 0.0\n",
+      "\u001b[36m\u001b[1m└ \u001b[22m\u001b[39m  iamp = 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mTotal iterations * blocks 160: 100%|██████| Time: 0:00:55 ( 0.35  s/it)\u001b[39m\n",
+      "\u001b[32mTotal iterations * blocks 160: 100%|██████| Time: 0:00:55 ( 0.35  s/it)\u001b[39m\n",
+      "Computed cross sections for path: ../results/testnorm\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[36m\u001b[1m┌ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mSaved A_sample\n",
+      "\u001b[36m\u001b[1m│ \u001b[22m\u001b[39m  filename = \"../results/testnorm/A_delta1_config2.jld2\"\n",
+      "\u001b[36m\u001b[1m│ \u001b[22m\u001b[39m  Δ = 0.0\n",
+      "\u001b[36m\u001b[1m└ \u001b[22m\u001b[39m  iamp = 2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "chisq at 1.0 = 61.30988806666385\n"
+     ]
+    }
+   ],
+   "source": [
+    "println(\"chisq at 1.0 = \", chisq_for_N₀_at_Δ₀(1.0, params_shape, params_wavefct, params_mc, params_run_local, params_norm))"
    ]
   },
   {
