Simpler algorithm to find best N0, fixed mismatch in directories for best norm in batch job scripts.

--- a/notebooks/ShapeFunctionsTests.ipynb
+++ b/notebooks/ShapeFunctionsTests.ipynb
@@ -124,19 +124,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "3c5ede02",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "([0.1, 0.29, 0.52, 0.78, 1.12, 1.55, 2.21, 3.3, 5.71], [47.3, 43.8, 36.7, 27.8, 16.8, 10.05, 6.04, 2.8, 0.875], [6.7, 6.0, 5.1, 4.2, 2.59, 1.56, 0.68, 0.38, 0.178])"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "LoadError",
+     "evalue": "UndefVarError: `read_coherent_data` not defined in `Main`\nSuggestion: check for spelling errors or missing imports.",
+     "output_type": "error",
+     "traceback": [
+      "UndefVarError: `read_coherent_data` not defined in `Main`\nSuggestion: check for spelling errors or missing imports.",
+      "",
+      "Stacktrace:",
+      " [1] top-level scope",
+      "\u001b[90m   @\u001b[39m \u001b[90m\u001b[4mIn[1]:1\u001b[24m\u001b[39m"
+     ]
     }
    ],
    "source": [
